// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageIdentifier": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the example-todo-main fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageIdentifier": "HomePage",
    "path": "/",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "typescriptPage",
    "pageIdentifier": "TypeScriptPage",
    "path": "/typescript",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/TypeScriptPage/TypeScriptPage.tsx",
    "name": "TypeScriptPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [
      "Could not find page EditUserPage",
    ],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "someOtherPage",
    "pageIdentifier": "EditUserPage",
    "path": "/somewhereElse",
    "prerender": true,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "fooPage",
    "pageIdentifier": "FooPage",
    "path": "/foo",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FooPage/FooPage.tsx",
    "name": "FooPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "barPage",
    "pageIdentifier": "BarPage",
    "path": "/bar",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BarPage/BarPage.tsx",
    "name": "BarPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": true,
    "name": "privatePage",
    "pageIdentifier": "PrivatePage",
    "path": "/private-page",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/PrivatePage/PrivatePage.tsx",
    "name": "PrivatePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageIdentifier": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the example-todo-main-with-errors fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageIdentifier": "HomePage",
    "path": "/",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageIdentifier": "HomePage",
    "path": "/",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [
      "Could not find page DoesNotExist",
    ],
    "filepath": "/web/src/Routes.js",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "something-else",
    "pageIdentifier": "DoesNotExist",
    "path": "/{foo}/{foo}",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "Routes",
    "pageIdentifier": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the test-project fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "login",
    "pageIdentifier": "LoginPage",
    "path": "/login",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/LoginPage/LoginPage.tsx",
    "name": "LoginPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "signup",
    "pageIdentifier": "SignupPage",
    "path": "/signup",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/SignupPage/SignupPage.tsx",
    "name": "SignupPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "forgotPassword",
    "pageIdentifier": "ForgotPasswordPage",
    "path": "/forgot-password",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ForgotPasswordPage/ForgotPasswordPage.tsx",
    "name": "ForgotPasswordPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "resetPassword",
    "pageIdentifier": "ResetPasswordPage",
    "path": "/reset-password",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ResetPasswordPage/ResetPasswordPage.tsx",
    "name": "ResetPasswordPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "newContact",
    "pageIdentifier": "ContactNewContactPage",
    "path": "/contacts/new",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/NewContactPage/NewContactPage.tsx",
    "name": "ContactNewContactPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "editContact",
    "pageIdentifier": "ContactEditContactPage",
    "path": "/contacts/{id:Int}/edit",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/EditContactPage/EditContactPage.tsx",
    "name": "ContactEditContactPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contact",
    "pageIdentifier": "ContactContactPage",
    "path": "/contacts/{id:Int}",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactPage/ContactPage.tsx",
    "name": "ContactContactPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contacts",
    "pageIdentifier": "ContactContactsPage",
    "path": "/contacts",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Contact/ContactsPage/ContactsPage.tsx",
    "name": "ContactContactsPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "newPost",
    "pageIdentifier": "PostNewPostPage",
    "path": "/posts/new",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/NewPostPage/NewPostPage.tsx",
    "name": "PostNewPostPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "editPost",
    "pageIdentifier": "PostEditPostPage",
    "path": "/posts/{id:Int}/edit",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/EditPostPage/EditPostPage.tsx",
    "name": "PostEditPostPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "post",
    "pageIdentifier": "PostPostPage",
    "path": "/posts/{id:Int}",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostPage/PostPage.tsx",
    "name": "PostPostPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "posts",
    "pageIdentifier": "PostPostsPage",
    "path": "/posts",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/Post/PostsPage/PostsPage.tsx",
    "name": "PostPostsPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "waterfall",
    "pageIdentifier": "WaterfallPage",
    "path": "/waterfall/{id:Int}",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/WaterfallPage/WaterfallPage.tsx",
    "name": "WaterfallPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": true,
    "name": "profile",
    "pageIdentifier": "ProfilePage",
    "path": "/profile",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ProfilePage/ProfilePage.tsx",
    "name": "ProfilePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "blogPost",
    "pageIdentifier": "BlogPostPage",
    "path": "/blog-post/{id:Int}",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BlogPostPage/BlogPostPage.tsx",
    "name": "BlogPostPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contactUs",
    "pageIdentifier": "ContactUsPage",
    "path": "/contact",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ContactUsPage/ContactUsPage.tsx",
    "name": "ContactUsPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "about",
    "pageIdentifier": "AboutPage",
    "path": "/about",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/AboutPage/AboutPage.tsx",
    "name": "AboutPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageIdentifier": "HomePage",
    "path": "/",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageIdentifier": "NotFoundPage",
    "path": undefined,
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;
